shared/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: aeroinbox
  labels:
    name: aeroinbox
    environment: prod
    managed-by: gitops
