shared/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aeroinbox-ingress
  namespace: aeroinbox
  annotations:
    appgw.ingress.kubernetes.io/use-private-ip: "false"
spec:
  ingressClassName: azure-application-gateway
  rules:
  - host: aeroinbox.qzz.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: aeroinbox-frontend
            port:
              number: 80
  - host: api.aeroinbox.qzz.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: aeroinbox-api-service
            port:
              number: 8000
